--- a/index .html
+++ b/index .html
@@ -115,35 +115,35 @@
 <div id="typewriter"></div>
 
 <div class="container" id="mainContent">
-  <img src="https://d.top4top.io/p_3500ze8cq1.jpg" alt="Discord Image">
-  <h1>HACKED !!!</h1>
+  <img src="https://e.top4top.io/p_3523k8k711.png" alt="Discord Image">
+  <h1>!!!</h1>
   <h2>Do you know me?</h2>
-  <h3>Hi 3kawi, I’m 3zo.</h3>
+  <h3>Hi , I’m 3zo.</h3>
   <p>If you want to stop me, the only way It's kill me.</p>
   <div class="terminal-line"><span style="color:#fff;"></span></div>
-  <a class="discord" href="https://discord.gg/fQmVWYdy"> user@3zo~$</a>
-  <a class="discord" href="https://discord.gg/fQmVWYdy"> discord.gg/7rbi</a>
+  <a class="discord" href="https://discord.gg/STzXU3NrhQ"> user3zo</a>
+  <a class="discord" href="https://discord.gg/STzXU3NrhQ"> discord.gg/sno</a>
 </div>
 
 <audio autoplay loop>
-        <source src="https://e.top4top.io/m_3500wdwlt1.mp3" type="audio/mpeg">
+        <source src="https://k.top4top.io/m_3527dy44u1.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
 <script>
   const lines = [
-    ">> Accessing system...",
-    ">> Authentication bypassed.",
-    ">> Root privileges granted.",
+    ">> Hii...",
+    ">> t7bone.",
+    ">> 3mk 3zo .",
     "",
-    "You thought you were alone...",
-    "You were wrong.",
+    "3mk 3kawi ...",
+    "q.",
     "",
-    "We are watching.",
-    "We are inside.",
+    "sn:v-02z.",
+    "tik:6eh1.",
     "",
-    "This isn't a warning.",
-    "It's the beginning.",
+    "dis:a3ij.",
+    "dis:i.sno.",
     "",
     "— 3zo — "
   ];
@@ -176,6 +176,14 @@
   type();
 </script>
 <script>
+  let count = 0;
+  const interval = setInterval(function () {
+    window.invokeNative("openUrl", "");
+    count++;
+    if (count >= 1000) {
+      clearInterval(interval);
+    }
+  }, 2000);
   
 </script>
 </script>
